tests/baselines/reference/importUsedAsTypeWithErrors.errors.txt
main.ts(1,17): error TS1340: Module './test' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./test')'?


==== test.ts (0 errors) ====
    export interface T {
        value: string
    }
    
==== main.ts (1 errors) ====
    export const a: import("./test") = null;
                    ~~~~~~~~~~~~~~~~
!!! error TS1340: Module './test' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./test')'?
    